finished nootebook crud
